# Email-Classifier

./: .env.example  .env.secrets.template  .gitignore  .pre-commit-config.yaml  ENVIRONMENT_SETUP.md  README.md  docker-compose.yml  pyproject.toml
.specify/memory/: constitution.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/src/: config.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/database/: __init__.py  enums.py  models.py
backend/src/database/migrations/: env.py
backend/src/database/migrations/versions/: a0c0f47850f1_initial_migration_for_data_model_.py  aeec6eb7459b_populate_taxonomy_seed_data.py
backend/tests/: conftest.py  test_config.py  test_fixtures.py
backend/tests/contract/: test_dashboard_api.py  test_metrics_payloads.py  test_schema_v2.py
backend/tests/integration/: __init__.py  test_error_handling.py  test_feedback_loop.py  test_idempotency.py  test_metrics_export.py  test_poll_classify_persist.py
docs/: monitoring-setup.md
frontend/: eslint.config.js  package.json  prettier.config.js
infra/monitoring/grafana/dashboards/: backend-overview.json  email-classifier-overview.json
infra/monitoring/grafana/provisioning/dashboards/: dashboards.yml
infra/monitoring/grafana/provisioning/datasources/: datasource.yml
infra/monitoring/prometheus/: alerts.yml  prometheus.yml
specs/001-i-am-building/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-i-am-building/contracts/: classification_schema_v2.json  dashboard_api.yaml  test_contracts.py
