[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.118.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.43",
    "httpx>=0.27.0",
    "pytest>=8.4.2",
    "pytest-postgresql>=7.0.2",
    "pytest-asyncio>=1.2.0",
    "factory-boy>=3.3.3",
    "responses>=0.25.8",
    "aiofiles>=24.1.0",
    "faker>=37.8.0",
    "freezegun>=1.5.5",
    "jsonschema>=4.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-postgresql>=5.0.0",
    "pytest-asyncio>=0.21.0",
    "factory-boy>=3.3.0",
    "responses>=0.23.0",
    "aiofiles>=23.0.0",
    "faker>=19.0.0",
    "freezegun>=1.2.0",
]
